--- a/index.html
+++ b/index.html
@@ -148,4 +148,4 @@
     
 </body>
 </html>
-<script type="text/javascript" src="main".js"></script>
+<script type="text/javascript" src="main.js"></script>
