--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     
 </body>
 </html>
-<script>    
+<script type="text/jquery-3">    
     var fixedSpeed = 3;
 
     var nowBallY = 0, nowBallX = 0;
