--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>打磚塊</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script
+    type="text/javascript"
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
@@ -148,7 +149,7 @@
     
 </body>
 </html>
-<script type="text/jquery-3">    
+<script type="text/javascript">    
     var fixedSpeed = 3;
 
     var nowBallY = 0, nowBallX = 0;
