--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 </body>
 </html>
 <script type="text/javascript">    
+alert("!");
     var fixedSpeed = 3;
 
     var nowBallY = 0, nowBallX = 0;
